--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-tooltip": "3.9.2",
     "redux": "3.7.2",
     "redux-promise": "0.6.0",
-    "redux-thunk": "2.3.0"
+    "redux-thunk": "2.3.0",
+    "sanitize-html": "1.20.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
